# epita-2025-MLRF-projet

./: 1.0-jqp-initial-data-exploration.ipynb
MLRF-PROJECT/: Makefile  README.md  pyproject.toml  requirements.txt
MLRF-PROJECT/docs/: mkdocs.yml
MLRF-PROJECT/docs/docs/: index.md
MLRF-PROJECT/src/: build_features.py  make_dataset.py  train_logistic_hog.py  train_model.py  visualize.py
