[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cifar_10"
version = "0.0.1"
description = "Il s'agit de classifier la BDD CIFAR-10. L'objectif est de devellopper une librairie python reproductible et opensource."
authors = [
  { name = "Paul GRAVEJAL, Alexandre MELANGER" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.2"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["cifar_10"]
force_sort_within_sections = true
